Bug 1694927 - Don't allow location APIs to steal focus. r=smaug,hsivonen, a=RyanVM

The check was a bit too general it seems. Explicitly allow moving focus
for link clicks and window.open(), which are the things we have tests
for and care about moving focus.

Differential Revision: https://phabricator.services.mozilla.com/D107039